fix:payment controller